// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`entry > scanEntries > 'vite-native' 1`] = `
{
  "app": {
    "deps": [],
    "json": null,
    "jsonPath": "app.json",
    "path": "app.js",
    "type": "app",
  },
  "components": [
    {
      "deps": [],
      "json": {
        "component": true,
        "styleIsolation": "apply-shared",
        "usingComponents": {},
      },
      "jsonPath": "components/navigation-bar/navigation-bar.json",
      "path": "components/navigation-bar/navigation-bar.ts",
      "type": "component",
    },
  ],
  "pages": [
    {
      "deps": [],
      "path": "packageA/pages/cat.ts",
      "type": "page",
    },
    {
      "deps": [],
      "path": "packageA/pages/dog.ts",
      "type": "page",
    },
    {
      "deps": [],
      "path": "packageB/pages/apple.js",
      "type": "page",
    },
    {
      "deps": [],
      "path": "packageB/pages/banana.ts",
      "type": "page",
    },
    {
      "deps": [
        {
          "path": "tdesign-miniprogram/button/button",
          "type": "component",
        },
        {
          "path": "tdesign-miniprogram/divider/divider",
          "type": "component",
        },
      ],
      "json": {
        "usingComponents": {
          "t-button": "tdesign-miniprogram/button/button",
          "t-divider": "tdesign-miniprogram/divider/divider",
        },
      },
      "jsonPath": "pages/index/index.json",
      "path": "pages/index/index.ts",
      "type": "page",
    },
  ],
  "subPackages": [],
}
`;

exports[`entry > scanEntries > 'vite-native-skyline' 1`] = `
{
  "app": {
    "deps": [
      {
        "path": "pages/index/index",
        "type": "page",
      },
    ],
    "json": {
      "componentFramework": "glass-easel",
      "lazyCodeLoading": "requiredComponents",
      "pages": [
        "pages/index/index",
      ],
      "renderer": "skyline",
      "rendererOptions": {
        "skyline": {
          "defaultDisplayBlock": true,
          "disableABTest": true,
          "sdkVersionBegin": "3.0.0",
          "sdkVersionEnd": "15.255.255",
        },
      },
      "sitemapLocation": "sitemap.json",
      "style": "v2",
      "window": {
        "navigationBarTextStyle": "black",
        "navigationStyle": "custom",
      },
    },
    "jsonPath": "app.json",
    "path": "app.js",
    "type": "app",
  },
  "components": [
    {
      "deps": [],
      "json": {
        "component": true,
        "styleIsolation": "apply-shared",
        "usingComponents": {},
      },
      "jsonPath": "components/navigation-bar/navigation-bar.json",
      "path": "components/navigation-bar/navigation-bar.js",
      "type": "component",
    },
  ],
  "pages": [
    {
      "deps": [
        {
          "path": "/components/navigation-bar/navigation-bar",
          "type": "component",
        },
      ],
      "json": {
        "usingComponents": {
          "navigation-bar": "/components/navigation-bar/navigation-bar",
        },
      },
      "jsonPath": "pages/index/index.json",
      "path": "pages/index/index.js",
      "type": "page",
    },
  ],
  "subPackages": [],
}
`;

exports[`entry > scanEntries > 'vite-native-ts' 1`] = `undefined`;

exports[`entry > scanEntries > 'vite-native-ts-skyline' 1`] = `undefined`;
